# cartoonizer

./: LICENSE  README.md  README.org  cartoonizer.py  setup.cfg  setup.py  test.py
src/cartooner/: __init__.py
src/cartoonizer/: __init__.py
