[metadata]
name = cartoonizer
version = 0.0.1
author = Tianming LU
author_email = tianming.lu@foxmail.com
description = This tool converts your photo into a cartoon-like image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lutianming/cartoonizer
project_urls =
Bug Tracker = https://github.com/lutianming/cartoonizer/issues
classifiers =
	Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
